# llm-prompt-tool

./: .gitee-ci.yml  .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  api_test.py  build.sh  build_exe.bat  check_annotations.py  check_config.py  check_testcases.py  code.html  create_dist.bat  create_dist.sh  docker-compose.yml  migrate_auto_annotate.py  migrate_db.py  package-lock.json  package.json  playwright-results.json  playwright.config.ts  prompt_tool.spec  pyproject.toml  requirements.txt  run.bat  run.sh  run_standalone.py  start.bat  step.md  test_api.py  test_combo_select.html  test_response.html  test_response.txt  tsconfig.json
.github/workflows/: build.yml
app/: database.py  main.py  prompt_tool.db  prompt_tool.db-journal  prompt_tool_v2.db
app/instance/: prompt_tool.db
app/routes/: annotate_routes.py  config_routes.py  defect_routes.py  model_routes.py  task_routes.py  testcase_routes.py
app/services/: __init__.py  auto_annotate_service.py  image_service.py  llm_service.py
app/static/: main.js  style.css
app/templates/: index.html
docs/: AUTO_ANNOTATE_API_DESIGN.md  COMBO_SELECT_GUIDE.md  GITEE_CI_GUIDE.md  GITHUB_CI_GUIDE.md
frontend/: package-lock.json  tsconfig.json  vite.config.ts
playwright-report/: index.html
scripts/: check_testcases.py  verify_resize.py
test-results/: .last-run.json
tests/: conftest.py  diagnose-lag.js  full-feature-test.js  run_frontend_tests.py  test-switch-images.js  test_api.py  test_frontend.py  test_image_resize.py  test_models.py  test_utils.py
(+141 files in other folders)
